# check-laads-order

./: .gitignore  CMakeLists.txt  README.md
i1n/: check_laads_order_zh_CN.ts
src/: CMakeLists.txt  Order.cpp  Order.h  check_laads_order.cpp  check_laads_order.h  check_laads_order.ui  fast_cksum.cpp  fast_cksum.h  icons.qrc  main.cpp  report.cpp  report.h  report.ui  translations.qrc
src/i1n/: check_laads_order_zh_CN.qm  check_laads_order_zh_CN.ts
